--- a/MPEGtest/MPEGtest.csproj
+++ b/MPEGtest/MPEGtest.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AForge.Imaging" Version="2.2.5" />
     <PackageReference Include="DependencyInjection" Version="1.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0">
@@ -32,6 +33,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Update="Views\ImageFiltersView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Views\SingleFiltersView\SingleFilterView.cs">
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
