--- a/MPEGtest/MPEGtest.csproj
+++ b/MPEGtest/MPEGtest.csproj
@@ -35,7 +35,7 @@
     <Compile Update="Views\ImageFiltersView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="Views\SingleFiltersView\SingleFilterView.cs">
+    <Compile Update="Views\SingleFiltersView\SingleFilterViewView.cs">
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
