--- a/MPEGtest/MPEGtest.csproj
+++ b/MPEGtest/MPEGtest.csproj
@@ -35,16 +35,16 @@
     <Compile Update="Views\ImageFiltersView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="Views\SingleFiltersView\SingleFilterView.cs">
+    <Compile Update="Views\SingleFiltersView\SliderForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="Views\SingleFiltersView\MedianFilterView.cs">
+    <Compile Update="Views\SingleFiltersView\FilterInputView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="Views\SingleFiltersView\GaussianFilterView.cs">
+    <Compile Update="Views\SingleFiltersView\CrCgCbForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="Views\SingleFiltersView\ErrosionFilterView.cs">
+    <Compile Update="Views\SingleFiltersView\ConfirmationForm.cs">
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
